[gd_scene load_steps=4 format=3 uid="uid://c10qu10swsh6g"]

[ext_resource type="Shader" path="res://menus/pause_menu/extras_menu.gdshader" id="1_db8dw"]
[ext_resource type="Script" path="res://menus/pause_menu/extras_menu.gd" id="1_yklxr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vs1uj"]
shader = ExtResource("1_db8dw")
shader_parameter/lod = 0.0

[node name="ExtrasMenu" type="Control"]
process_mode = 3
material = SubResource("ShaderMaterial_vs1uj")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yklxr")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 2
use_parent_material = true
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PanelContainer2" type="PanelContainer" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 698.0
offset_top = 272.5
offset_right = 1222.0
offset_bottom = 807.5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
process_mode = 2
layout_mode = 2

[node name="ExtrasLabel" type="Label" parent="PanelContainer2/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Extras"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="PanelContainer2/VBoxContainer"]
process_mode = 2
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="CurrentStats" type="Button" parent="PanelContainer2/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Current Stats"

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/VBoxContainer"]
process_mode = 2
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="DataButton" type="Button" parent="PanelContainer2/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Data References"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer2/VBoxContainer"]
process_mode = 2
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer2/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Back"

[connection signal="pressed" from="PanelContainer2/VBoxContainer/CurrentStats" to="." method="_on_current_stats_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/DataButton" to="." method="_on_data_references_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
